[package]
name = "rust-gocqhttp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde-value = "0.7.0"
tokio-tungstenite = "*"
cq_code_derive = { path = "src/message/cq_code_derive" }
regex = "1.9.5"
tokio = { version = "1.32.0", features = ["rt", "macros"] }
log = "0.4.20"
async-trait = "0.1.73"